docs(docs): update introduction to version for vue 3

--- a/packages/documentation/docs/vue-3-version/index.mdx
+++ b/packages/documentation/docs/vue-3-version/index.mdx
@@ -114,6 +114,5 @@ import { createGmapVuePlugin } from '@gmap-vue/v3';
 - The `mapped-props` concept was removed from the plugin and now every component has its props defined on it.
 
 :::note
-If some of the changes are missed here please open a PR to add it to this list, thank you.
-:::import TabItem from '@theme/TabItem';
-import Tabs from '@theme/Tabs';
+If we missed some of the bracking changes, feel free to open a PR to add them to this list.
+:::
